skills grid container problems fixed: gaps beetwen rows and cols; grid items animation; pointer on the hover

--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@ li a, li a:link, li a:visited{
     padding: 30px;
     z-index: 3;
 }
+
+#lang_choose:hover{
+    cursor: pointer;
+}
+
 #page_nr span:first-child, #lang_choose a:first-child{
     color: #FF0005;
 }
@@ -171,6 +176,10 @@ li a, li a:link, li a:visited{
     height: 50px;
     margin-top: 20px;
     z-index: 3;
+}
+
+#nav:hover{
+    cursor: pointer;
 }
 
 .nav-belt{
@@ -239,16 +248,19 @@ li:hover:after{
     padding: 20px;
     margin: 50px auto;
     min-height: 60vh;
-    border: solid 2px white ;
+    border: solid 2px white;
     overflow: hidden;
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 .grid-item{
-    height: 10vh;
+    min-height: 10vh;
     text-align: center;
     padding: 10px;
+    transform: scale(0); /* animation */
+    transition: all .5s ease-in-out;
 }
-
 
 .grid-item i{
     font-size: 50px;
@@ -318,6 +330,10 @@ img{
     font-family: 'Rubik', sans-serif;
 }
 
+.card-title a:hover{
+    cursor: pointer;
+}
+
 .card-bg{
     width: 40vw;
     height: 60vh;
@@ -359,6 +375,10 @@ img{
     transform: translateX(-50%);
     text-align: center;
     box-sizing: content-box;
+}
+
+#more_projects:hover{
+    cursor: pointer;
 }
 
 #more_projects:after, #more_projects:before, .card-title a:after, .card-title a:before{
@@ -482,6 +502,7 @@ button:hover{
     background-color: #121212;
     border: 1px solid white;
     color: white;
+    cursor: pointer;
 }
 
 #contact-options{
